<resources>
    <string name="app_name">Clique</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="login">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>
